--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,6 +2,16 @@
 
 {% block title %}TITLE GOES HERE{% endblock %}
 
+{% block scripts %}
+    <script>
+    //javaScript file
+    </script>
+{% endblock %}
+
+{% block style %}
+
+{% endblock %}
+
 {% block content %}
     <!-- code goes here -->
     <h1>HERE IS CONTENT</h1>
