--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}TITLE GOES HERE{% endblock %}
+{% block title %}LifeHack{% endblock %}
 
 {% block scripts %}
     <script>
@@ -14,5 +14,5 @@
 
 {% block content %}
     <!-- code goes here -->
-    <h1>HERE IS CONTENT</h1>
+    <h1>To-Do List:</h1>
 {% endblock %}
